<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/splash_view"
        android:layout_width="330dp"
        android:layout_height="102dp"
        android:layout_marginTop="95dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_green_flag2x" />

    <TextView
        android:id="@+id/green_flag_txt"
        android:layout_width="346dp"
        android:layout_height="97dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="36dp"
        android:fontFamily="@font/museosans_500"
        android:text="@string/green_flag_customers_can_create_an_account_to_access"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_img_splash"
        android:layout_width="323dp"
        android:layout_height="100dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964"
        app:srcCompat="@drawable/gradient_button_background2x" />

    <TextView
        android:id="@+id/create_act_txt"
        android:layout_width="286dp"
        android:layout_height="41dp"
        android:fontFamily="@font/museosans_500"
        android:text="@string/create_an_account"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_img_splash"
        app:layout_constraintEnd_toEndOf="@+id/btn_img_splash"
        app:layout_constraintStart_toStartOf="@+id/btn_img_splash"
        app:layout_constraintTop_toTopOf="@+id/btn_img_splash" />

    <TextView
        android:id="@+id/car_health_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="371dp"
        android:drawableLeft="@drawable/tick2x"
        android:drawablePadding="10dp"
        android:fontFamily="@font/museosans_300"
        android:scaleX=".7"
        android:scaleY=".7"
        android:text="@string/car_health_updates"
        android:textColor="#FFFFFF"
        android:textScaleX="1.4"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/request_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/request_txt"
        android:layout_width="393dp"
        android:layout_height="34dp"
        android:drawableLeft="@drawable/tick2x"
        android:drawablePadding="10dp"
        android:fontFamily="@font/museosans_300"
        android:scaleX=".7"

        android:scaleY=".7"
        android:text="@string/request_a_rescue_online"
        android:textColor="#FFFFFF"
        android:textScaleX="1.4"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/policy_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_health_txt" />

    <TextView
        android:id="@+id/policy_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/tick2x"
        android:drawablePadding="10dp"
        android:fontFamily="@font/museosans_300"
        android:scaleX=".7"
        android:scaleY=".7"
        android:text="@string/policy_information"
        android:textColor="#FFFFFF"
        android:textScaleX="1.4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_txt" />


</androidx.constraintlayout.widget.ConstraintLayout>